# lsrl

./: README.md  pyproject.toml  大模型后训练简明指南.md
examples/: benchmark.py  rl_async_reward.py  rl_callpy.py  rl_callpy_npu.py  rl_gsm8k.py  rl_gsm8k_14b_1gpu.py  rl_gsm8k_7b_1gpu.py  rl_gsm8k_DAPO.py  rl_rwmodel.py  rl_trunc.py  sft_14b_80g_1gpu.py  sft_14b_80g_dp.py  sft_14b_80g_trainer.py  sft_14b_m24g_pp.py  sft_muon.py  sft_npus.py
lsrl/: __init__.py  cpuadamw.py  cpumuon.py  dataloader.py  lsrl.py  lsrl_sync.py  no_vllm_lsrl_patch.py  patch_for_cpu_offload.py  patch_for_multi_gpus.py  ref_server.py  reward_server.py  utils.py
