[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsrl"
version = "0.1.0"
description = "Low ReSource Reinforcement Learning - A PyTorch RL training framework"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jiaqing Liang", email = "l.j.q.light@gmail.com"}
]
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.20.0", 
    "bottle>=0.12.0",
    "tornado>=6.0.0",
    "numpy>=1.20.0"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/lsdefine/lsrl"
Repository = "https://github.com/lsdefine/lsrl.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["lsrl*"]

# 代码格式化配置
[tool.black]
line-length = 100
target-version = ['py38']